# zlgcan

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/zlgcan/: canframe.h  config.h  zlgcan.h
src/: devices.xml  main.cpp  main.h  plugin.json  zlgcan.qrc  zlgcanbackend.cpp  zlgcanbackend.h  zlgcanbackend_p.cpp  zlgcanbackend_p.h
